--- a/package.json
+++ b/package.json
@@ -4,35 +4,35 @@
   "description": "News analyzer by keyword",
   "main": "./src/scripts/index.js",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "core-js": "^3.4.1"
+    "babel-polyfill": "6.26.0",
+    "core-js": "3.4.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.5",
-    "@babel/core": "^7.11.5",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/cli": "7.11.5",
+    "@babel/core": "7.11.5",
+    "@babel/plugin-proposal-class-properties": "7.10.4",
+    "@babel/preset-env": "7.11.5",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.2.2",
-    "cssnano": "^4.1.10",
-    "file-loader": "^6.1.0",
-    "gh-pages": "^3.1.0",
-    "html-webpack-plugin": "^4.4.1",
-    "image-webpack-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^0.11.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "path": "^0.12.7",
-    "postcss-loader": "^3.0.0",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "clean-webpack-plugin": "3.0.0",
+    "css-loader": "4.2.2",
+    "cssnano": "4.1.10",
+    "file-loader": "6.1.0",
+    "gh-pages": "3.1.0",
+    "html-webpack-plugin": "4.4.1",
+    "image-webpack-loader": "6.0.0",
+    "mini-css-extract-plugin": "0.11.0",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "path": "0.12.7",
+    "postcss-loader": "3.0.0",
+    "style-loader": "1.2.1",
+    "webpack": "4.44.1",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0",
     "webpack-md5-hash": "0.0.6"
   },
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "rimraf dist && webpack --mode production",
     "dev": "webpack-dev-server --mode development --open --watch",
     "deploy": "gh-pages -d dist"
   },
