--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@babel/core": "7.11.5",
     "@babel/plugin-proposal-class-properties": "7.10.4",
     "@babel/preset-env": "7.11.5",
-    "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
+    "autoprefixer": "9.8.6",
+    "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
+    "copy-webpack-plugin": "^6.1.1",
     "css-loader": "4.2.2",
     "cssnano": "4.1.10",
     "file-loader": "6.1.0",
